--- a/app/views/layouts/shared/_footer.html.haml
+++ b/app/views/layouts/shared/_footer.html.haml
@@ -26,7 +26,7 @@
         %p
           &copy; НП
           %br 
-          = link_to configus.mail.main
+          = mail_to configus.mail.main
 /
   Javascripts
   \==================================================
