--- a/app/views/web/admin/members/_form.html.haml
+++ b/app/views/web/admin/members/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @member, :as => :member, :validate => true, :url => admin_member_path(@member), :html => {:class => "form-horizontal"} do |f|
+= simple_form_for @member, :validate => true, :url => admin_member_path(@member), :html => {:class => "form-horizontal"} do |f|
   = f.error_notification
 
   - with_options :scope => "members" do |i18n|
