--- a/app/views/layouts/shared/_navbar.html.haml
+++ b/app/views/layouts/shared/_navbar.html.haml
@@ -6,7 +6,7 @@
         %span.icon-bar
         %span.icon-bar
           %a.brand{ :href => root_path }
-            = image_tag 'logo.png', :id => "topbar_logo"
+            = image_tag 'deadline_logo.png', :id => "topbar_logo"
             -#= t 'base_name'
       .container.nav-collapse
         %ul.nav
