--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -1,5 +1,5 @@
-.row#landing
-  .span5
+.row.landing_top
+  .span6
     %h2 9 - 16 июля в Русском береге
     %h3 Выездной обучающий семинар для молодёжи, которая хочет работать в сфере ИТ, в частности, заниматься разработкой программных продуктов. Участники в течение нескольких дней будут работать над продуктом.
     - if member_signed_in?
@@ -13,43 +13,51 @@
       %a.btn.btn-primary.btn-large{:href => new_session_path}
         %i.icon-chevron-right
         Вход
-  .span4
+  .span6
     .thumbnail
       = image_tag 'deadline_clock.jpg'
 
-= image_tag 'grey_out.png'
+.center.splitter
+  = image_tag 'grey_out.png'
 
-.row
-  .span5
-    %h4 Как это будет происходить
-    %ul
-      %li
-        %p
-          %b Какие проекты будут разрабатываться участниками?
-        %p Микро-проекты от ведущих ИТ-компаний Ульяновска.
-      %li
-        %p
-          %b Кто наша аудитория?
-        %p Студенты и школьники, желающие работать в сфере ИТ и бегло программирующие хотя бы на одном языке программирования.
-      %li
-        %p
-          %b Как мы собираемся это делать?
-        %p Определим тестовое задание. Разместим его на сайте. Проведём отбор по его выполнению.
-        %p Пригласим на семинар специалистов.
-        %p Все дни на семинаре участники с утра до вечера будут заниматься разработкой проектов.
-      %li
-        %p
-          %b За чей счёт?
-        %p Для участников мероприятие будет бесплатным.
-        %p Проживание, питание, доставка участников до места назначения и обратно будут организованы МИЦ за счёт Министерства образования.
-        %p Каждый участник должен иметь при себе личный ноутбук и желание плодотворно поработать.
-  .span5
+.row.landing_lower
+  .span4
+    %h4 Кто наша аудитория?
+    .thumbnail.p
+      = image_tag 'people_block.png'
+    %p Студенты и школьники, желающие работать в сфере ИТ и бегло программирующие хотя бы на одном языке программирования.
+  .span4 
+    %h4 Как мы собираемся это делать?
+    %p Определим тестовое задание. Разместим его на сайте. Проведём отбор по его выполнению.
+    %p Пригласим на семинар специалистов.
+    %p Все дни на семинаре участники с утра до вечера будут заниматься разработкой проектов.
+  .span4
+    %h4 Какие проекты будут разрабатываться участниками?
+    .thumbnail.p
+      = image_tag 'langs_block.png'
+    %p Микро-проекты от ведущих ИТ-компаний Ульяновска.
+
+.center.splitter
+  = image_tag 'grey_out.png'
+
+.row.landing_lower
+  .span6
+    %h4 За чей счёт?
+    %p Для участников мероприятие будет бесплатным.
+    %p Проживание, питание, доставка участников до места назначения и обратно будут организованы МИЦ за счёт Министерства образования.
+    %p Каждый участник должен иметь при себе личный ноутбук и желание плодотворно поработать.
+  .span6
     %h4 Зачем это нужно?
     %ul
       %li Создание площадки для самореализации будущих специалистам
       %li Обмен опытом между участниками и действующими специалистами ведущих компании по разработке программного обеспечения г.Ульяновска
       %li Создание «движухи» для молодых программистов Ульяновской области Мероприятие реализуется на общественных началах. В планах сделать Смену Deadline ежегодным мероприятием.
 
+.center.splitter
+  = image_tag 'grey_out.png'
+
+.row.landing_bottom
+  .span10
     %h4 Организаторы
     %p МИЦ
     %p Некоммерческое партнерство
