--- a/app/views/layouts/shared/_navbar.html.haml
+++ b/app/views/layouts/shared/_navbar.html.haml
@@ -8,7 +8,7 @@
           %a.brand{ :href => root_path }
             = image_tag 'deadline_logo.png', :id => "topbar_logo"
             -#= t 'base_name'
-      .container.nav-collapse
+      .nav-collapse
         %ul.nav
           %li= link_to_page program_page
           %li= link_to_page place_page
