fixed edit account html

--- a/app/views/web/accounts/_skill_fields.html.haml
+++ b/app/views/web/accounts/_skill_fields.html.haml
@@ -1,5 +1,5 @@
 .control-group.nested-fields
-  .close.mr280
+  .close.mr
     = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
   = f.association :dict, :label => false
   = f.input :level, :collection => level_collection
