--- a/app/views/web/accounts/_job_fields.html.haml
+++ b/app/views/web/accounts/_job_fields.html.haml
@@ -1,5 +1,5 @@
 .control-group.nested-fields
-  .close.mr280
+  .close.mr
     = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
   = f.input :company
   = f.input :started_at, :as => :date_picker
