--- a/app/views/web/accounts/_skill_other_fields.html.haml
+++ b/app/views/web/accounts/_skill_other_fields.html.haml
@@ -1,5 +1,5 @@
 .control-group.nested-fields
-  .close.mr280
+  .close.mr
     = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
   = f.input :name, :label => false
   = f.input :level, :collection => Member::Skill::LEVELS
