--- a/app/views/web/accounts/edit.html.haml
+++ b/app/views/web/accounts/edit.html.haml
@@ -1,138 +1,138 @@
-.row
-  = simple_form_for current_member, :validate => true, :url => account_path, :html => {:class => "form-horizontal well"} do |f|
-    = f.error_notification
+= simple_form_for current_member, :validate => true, :url => account_path, :html => {:class => "form-horizontal well"} do |f|
+  = f.error_notification
 
-    - with_options :scope => "members" do |i18n|
-      .tabbable
-        %ul.nav.nav-tabs
-          %li.active
-            %a{:href => '#general', "data-toggle" => "tab"}= i18n.t('general_info')
-          %li
-            %a{:href => '#additional_educations', "data-toggle" => "tab"}= i18n.t 'additional_educations_tab'
-          %li
-            %a{:href => '#skill', "data-toggle" => "tab"}= i18n.t 'skill'
-          %li
-            %a{:href => '#hobby', "data-toggle" => "tab"}= i18n.t('hobby')
-          %li.pull-right
-            %a{:href => edit_account_password_path}= i18n.t('reset_password')
-        .tab-content.span9
-          .tab-pane.active#general
-            .row
-              .span4
-                %fieldset
-                  %legend= i18n.t('contact_info')
-                  = f.input :first_name
-                  = f.input :last_name
-                  = f.input :patronymic
-                  = f.input :phone,
-                    :input_html => {:rel => 'popover', :title => i18n.t('phone.title'), :"data-content" => i18n.t('phone.content')}
-                  = f.input :skype
-                  = f.input :jabber
-                  = f.input :icq
-                  = f.input :web
-              .span5
-                %fieldset
-                  %legend= i18n.t('education')
-                  = f.input :institute
-                  = f.input :study_start do
-                    = f.input_field :start_month, :collection => Member::STUDY_MONTH, :include_blank => t('datetime.prompts.month'),
-                      :style => 'width: 155px'
-                    = f.input_field :start_year, :placeholder => t('datetime.prompts.year'), :class => 'span1'
-                  = f.input :study_finish do
-                    = f.input_field :finish_month, :collection => Member::STUDY_MONTH, :include_blank => t('datetime.prompts.month'),
-                      :style => 'width: 155px'
-                    = f.input_field :finish_year, :placeholder => t('datetime.prompts.year'), :class => 'span1'
-                  = f.input :department
-                  = f.input :profession
-                  = f.input :degree
-                  = f.input :gpa
+  - with_options :scope => "members" do |i18n|
 
-          .tab-pane#additional_educations
-            %fieldset
-              %legend= i18n.t 'additional_educations'
-              = f.simple_fields_for :additional_educations do |p|
-                = render 'additional_education_fields', :f => p
-              .links.control-group
-                = link_to_add_association i18n.t('add'), f, :additional_educations
+    .tabbable
+      %ul.nav.nav-tabs
+        %li.active
+          %a{:href => '#general', "data-toggle" => "tab"}= i18n.t('general_info')
+        %li
+          %a{:href => '#additional_educations', "data-toggle" => "tab"}= i18n.t 'additional_educations_tab'
+        %li
+          %a{:href => '#skill', "data-toggle" => "tab"}= i18n.t 'skill'
+        %li
+          %a{:href => '#hobby', "data-toggle" => "tab"}= i18n.t('hobby')
+        %li.pull-right
+          %a{:href => edit_account_password_path}= i18n.t('reset_password')
+      .tab-content
+        .tab-pane.active#general
+          .row
+            .span5
+              %fieldset
+                %legend= i18n.t('contact_info')
+                = f.input :first_name
+                = f.input :last_name
+                = f.input :patronymic
+                = f.input :phone,
+                  :input_html => {:rel => 'popover', :title => i18n.t('phone.title'), :"data-content" => i18n.t('phone.content')}
+                = f.input :skype
+                = f.input :jabber
+                = f.input :icq
+                = f.input :web
+            .span5
+              %fieldset
+                %legend= i18n.t('education')
+                = f.input :institute
+                = f.input :study_start do
+                  = f.input_field :start_month, :collection => Member::STUDY_MONTH, :include_blank => t('datetime.prompts.month'),
+                    :style => 'width: 155px'
+                  = f.input_field :start_year, :placeholder => t('datetime.prompts.year'), :class => 'span1'
+                = f.input :study_finish do
+                  = f.input_field :finish_month, :collection => Member::STUDY_MONTH, :include_blank => t('datetime.prompts.month'),
+                    :style => 'width: 155px'
+                  = f.input_field :finish_year, :placeholder => t('datetime.prompts.year'), :class => 'span1'
+                = f.input :department
+                = f.input :profession
+                = f.input :degree
+                = f.input :gpa
 
-            %fieldset
-              %legend= i18n.t 'achievements'
-              = f.simple_fields_for :achievements do |p|
-                = render 'achievement_fields', :f => p
-              .links.control-group
-                = link_to_add_association i18n.t('add'), f, :achievements
+        .tab-pane#additional_educations
+          %fieldset
+            %legend= i18n.t 'additional_educations'
+            = f.simple_fields_for :additional_educations do |p|
+              = render 'additional_education_fields', :f => p
+            .links.control-group
+              = link_to_add_association i18n.t('add'), f, :additional_educations
 
-            %fieldset
-              %legend= i18n.t 'langs'
-              = f.simple_fields_for :langs do |p|
-                = render 'lang_fields', :f => p
-              .links.control-group
-                = link_to_add_association i18n.t('add'), f, :langs
+          %fieldset
+            %legend= i18n.t 'achievements'
+            = f.simple_fields_for :achievements do |p|
+              = render 'achievement_fields', :f => p
+            .links.control-group
+              = link_to_add_association i18n.t('add'), f, :achievements
 
-          .tab-pane#skill
-            %h2= i18n.t 'skill'
+          %fieldset
+            %legend= i18n.t 'langs'
+            = f.simple_fields_for :langs do |p|
+              = render 'lang_fields', :f => p
+            .links.control-group
+              = link_to_add_association i18n.t('add'), f, :langs
 
-            %fieldset
-              %legend= i18n.t 'skills.program_lang'
-              = f.simple_fields_for :skill_program_langs do |p|
-                = render 'skill_program_lang_fields', :f => p
-              .links.control-group
-                = link_to_add_association i18n.t('add'), f, :skill_program_langs
+        .tab-pane#skill
+          %h2= i18n.t 'skill'
 
-            %fieldset
-              %legend= i18n.t 'skills.database'
-              = f.simple_fields_for :skill_databases do |p|
-                = render 'skill_database_fields', :f => p
-              .links.control-group
-                = link_to_add_association i18n.t('add'), f, :skill_databases
+          %fieldset
+            %legend= i18n.t 'skills.program_lang'
+            = f.simple_fields_for :skill_program_langs do |p|
+              = render 'skill_program_lang_fields', :f => p
+            .links.control-group
+              = link_to_add_association i18n.t('add'), f, :skill_program_langs
 
-            %fieldset
-              %legend= i18n.t 'skills.os'
-              = f.simple_fields_for :skill_operation_systems do |p|
-                = render 'skill_operation_system_fields', :f => p
-              .links.control-group
-                = link_to_add_association i18n.t('add'), f, :skill_operation_systems
+          %fieldset
+            %legend= i18n.t 'skills.database'
+            = f.simple_fields_for :skill_databases do |p|
+              = render 'skill_database_fields', :f => p
+            .links.control-group
+              = link_to_add_association i18n.t('add'), f, :skill_databases
 
-            %fieldset
-              %legend= i18n.t 'skills.ide'
-              = f.simple_fields_for :skill_ides do |p|
-                = render 'skill_ide_fields', :f => p
-              .links.control-group
-                = link_to_add_association i18n.t('add'), f, :skill_ides
+          %fieldset
+            %legend= i18n.t 'skills.os'
+            = f.simple_fields_for :skill_operation_systems do |p|
+              = render 'skill_operation_system_fields', :f => p
+            .links.control-group
+              = link_to_add_association i18n.t('add'), f, :skill_operation_systems
 
-            %fieldset
-              %legend= i18n.t 'skills.other'
-              = f.simple_fields_for :skill_others do |p|
-                = render 'skill_other_fields', :f => p
-              .links.control-group
-                = link_to_add_association i18n.t('add'), f, :skill_others
+          %fieldset
+            %legend= i18n.t 'skills.ide'
+            = f.simple_fields_for :skill_ides do |p|
+              = render 'skill_ide_fields', :f => p
+            .links.control-group
+              = link_to_add_association i18n.t('add'), f, :skill_ides
 
-            %fieldset
-              %legend= i18n.t 'preference'
-              = f.simple_fields_for :preferences do |p|
-                = render 'preference_fields', :f => p
-              .links.control-group
-                = link_to_add_association i18n.t('add'), f, :preferences
+          %fieldset
+            %legend= i18n.t 'skills.other'
+            = f.simple_fields_for :skill_others do |p|
+              = render 'skill_other_fields', :f => p
+            .links.control-group
+              = link_to_add_association i18n.t('add'), f, :skill_others
 
-            %fieldset
-              %legend= i18n.t 'job'
-              = f.simple_fields_for :jobs do |p|
-                = render 'job_fields', :f => p
-              .links.control-group
-                = link_to_add_association i18n.t('add'), f, :jobs
+          %fieldset
+            %legend= i18n.t 'preference'
+            = f.simple_fields_for :preferences do |p|
+              = render 'preference_fields', :f => p
+            .links.control-group
+              = link_to_add_association i18n.t('add'), f, :preferences
 
-            %fieldset
-              %legend= i18n.t 'other'
-              = f.simple_fields_for :others do |p|
-                = render 'other_fields', :f => p
-              .links.control-group
-                = link_to_add_association i18n.t('add'), f, :others
+          %fieldset
+            %legend= i18n.t 'job'
+            = f.simple_fields_for :jobs do |p|
+              = render 'job_fields', :f => p
+            .links.control-group
+              = link_to_add_association i18n.t('add'), f, :jobs
+
+          %fieldset
+            %legend= i18n.t 'other'
+            = f.simple_fields_for :others do |p|
+              = render 'other_fields', :f => p
+            .links.control-group
+              = link_to_add_association i18n.t('add'), f, :others
 
 
-          .tab-pane#hobby
+        .tab-pane#hobby
 
-            = f.input :hobby, :as => :text_desc
-            = f.input :sport, :as => :text_desc
+          = f.input :hobby, :as => :text_desc
+          = f.input :sport, :as => :text_desc
 
-          .form-actions
-            = f.button :submit, :class => 'btn btn-primary'
+        .form-actions
+          = f.button :submit, :class => 'btn btn-primary'
