--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -29,3 +29,8 @@ body { padding-top: 80px; }
 // @linkColor: #ff0000;
 
 @baseFontSize: 14px;
+
+@media (min-width: 940px) {
+  .container {max-width:970px;}
+}
+
