--- a/app/views/layouts/shared/_head.html.haml
+++ b/app/views/layouts/shared/_head.html.haml
@@ -1,4 +1,5 @@
 %meta(charset="utf-8")
+%meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
 %meta(name="viewport" content="width=device-width, initial-scale=1.0")
 %title= title
 = csrf_meta_tags
@@ -6,7 +7,3 @@
 /[if lt IE 9]
   = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
 = stylesheet_link_tag "application", :media => "all"
-%link(href="images/favicon.ico" rel="shortcut icon")
-%link(href="images/apple-touch-icon.png" rel="apple-touch-icon")
-%link(href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72")
-%link(href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114")
