--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -1,5 +1,5 @@
 .row.landing_top
-  .span6
+  .span5
     %h2 9 - 16 июля в Русском береге
     %h3 Выездной обучающий семинар для молодёжи, которая хочет работать в сфере ИТ, в частности, заниматься разработкой программных продуктов. Участники в течение нескольких дней будут работать над продуктом.
     - if member_signed_in?
@@ -16,9 +16,8 @@
       %a.btn.btn-primary.btn-large{:href => new_session_path}
         %i.icon-chevron-right
         Вход
-  .span6
-    .thumbnail
-      = image_tag 'deadline_clock.jpg'
+  .span5
+    = image_tag 'man.png', :width => '430px'
 
 .center.splitter
   = image_tag 'grey_out.png'
