--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -25,7 +25,7 @@
 .row.landing_lower
   .span4
     %h4 Кто наша аудитория?
-    .thumbnail.p
+    -#.thumbnail.p
       = image_tag 'people_block.png'
     %p Студенты и школьники, желающие работать в сфере ИТ и бегло программирующие хотя бы на одном языке программирования.
   .span4 
@@ -35,7 +35,7 @@
     %p Все дни на семинаре участники с утра до вечера будут заниматься разработкой проектов.
   .span4
     %h4 Какие проекты будут разрабатываться участниками?
-    .thumbnail.p
+    -#.thumbnail.p
       = image_tag 'langs_block.png'
     %p Микро-проекты от ведущих ИТ-компаний Ульяновска.
 
