--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -30,7 +30,6 @@ body { padding-top: 80px; }
 
 @baseFontSize: 14px;
 
-@media (min-width: 940px) {
+@media (min-width: 940px) and (max-width: 1170px) {
   .container {max-width:970px;}
 }
-
