added group to member

--- a/app/views/web/members/new.html.haml
+++ b/app/views/web/members/new.html.haml
@@ -28,6 +28,7 @@
             = f.input_field :finish_year, :placeholder => t('datetime.prompts.year'), :class => 'span1'
           = f.input :department
           = f.input :profession
+          = f.input :group
           = f.input :degree
           = f.input :gpa
 
