--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -61,6 +61,8 @@
 .row.landing_bottom
   .span10
     %h4 Организаторы
-    %p МИЦ
-    %p Некоммерческое партнерство
+    .span4
+      = image_tag 'picture_mic.png'
+    -#.span4
+      %p Некоммерческое партнерство
 
