fixed mic image height

--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -62,7 +62,7 @@
   .span10
     %h4 Организаторы
     .span4
-      = image_tag 'picture_mic.png'
+      = image_tag 'picture_mic.png', :style => 'height: 100px;'
     -#.span4
       %p Некоммерческое партнерство
 
