--- a/app/views/layouts/shared/_footer.html.haml
+++ b/app/views/layouts/shared/_footer.html.haml
@@ -24,7 +24,7 @@
     .row#footer_bottom
       .span10
         %p
-          &copy; НП
+          &copy; НП "Содействие развитию ИТ"
           %br 
           = mail_to configus.mail.main
 /
