--- a/app/views/web/account/remind_passwords/new.html.haml
+++ b/app/views/web/account/remind_passwords/new.html.haml
@@ -1,7 +1,7 @@
 .row
   .span4.offset3.well
     %h2= t('.password_remind')
-    = simple_form_for :member, :url => account_remind_password_path do |f|
+    = simple_form_for @member, :url => account_remind_password_path do |f|
       - f.with_options :input_html => {:class => :span4} do |f|
         = f.input :email
 
