fixed admin pagination

--- a/app/views/web/admin/members/index.html.haml
+++ b/app/views/web/admin/members/index.html.haml
@@ -36,3 +36,5 @@
           %span
             %a{:href => admin_member_path(m), :data => {:method => :delete, :confirm => t(:sure)}, :title => t(:delete)}
               %i.icon-remove
+
+= paginate @members
