--- a/app/views/web/admin/pages/index.html.haml
+++ b/app/views/web/admin/pages/index.html.haml
@@ -21,3 +21,5 @@
             %a{:href => admin_page_path(p.id), :data => {:method => :delete, :confirm => t(:sure)}, :title => t(:delete)}
               %i.icon-remove
   = link_to t('.new'), new_admin_page_path, :class => 'btn'
+
+= paginate @pages
