--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -51,7 +51,7 @@
   .span6
     %h4 Зачем это нужно?
     %ul
-      %li Создание площадки для самореализации будущих специалистам
+      %li Создание площадки для самореализации будущих специалистов
       %li Обмен опытом между участниками и действующими специалистами ведущих компании по разработке программного обеспечения г.Ульяновска
       %li Создание «движухи» для молодых программистов Ульяновской области Мероприятие реализуется на общественных началах. В планах сделать Смену Deadline ежегодным мероприятием.
 
