--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -63,6 +63,6 @@
     %h4 Организаторы
     .span4
       = image_tag 'picture_mic.png', :style => 'height: 100px;'
-    -#.span4
-      %p Некоммерческое партнерство
+    .span4
+      %p.span2 Некоммерческое Партнерство Содействия Развития ИТ
 
