--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -61,8 +61,15 @@
 .row.landing_bottom
   .span10
     %h4 Организаторы
-    .span4
+    .span2
       = image_tag 'picture_mic.png', :style => 'height: 100px;'
-    .span4
-      %p.span2 Некоммерческое Партнерство Содействия Развития ИТ
+    .span2
+      %p
+        Некоммерческое
+        %br
+        Партнерств
+        %br
+        Содействи
+        %br
+        Развития ИТ
 
