fixed main page txt

--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -67,9 +67,9 @@
       %p
         Некоммерческое
         %br
-        Партнерств
+        Партнерство
         %br
-        Содействи
+        Содействия
         %br
-        Развития ИТ
+        Развитию ИТ
 
