added member busted state

--- a/app/views/web/admin/members/index.html.haml
+++ b/app/views/web/admin/members/index.html.haml
@@ -15,7 +15,7 @@
       %tr
         %td= m.id
         %td= m.email
-        %td= m.state
+        %td= member_state_t m.state
         %td= m.first_name
         %td= m.last_name
         %td= m.patronymic
