--- a/app/views/member_mailer/welcome.ru.html.haml
+++ b/app/views/member_mailer/welcome.ru.html.haml
@@ -4,7 +4,7 @@
 
 %p Ваша анкета была успешно отправлена организаторам проекта.
 
-%p Пожалуйста, заполните необходимые данные на Вашей личной странице для успешного прохождения отбора для участия в Deadline-Смене. Для этого авторизуйтесь на сайте и войдите в #{link_to "Ваш профиль" , edit_account_url}.
+%p Пожалуйста, заполните необходимые данные на Вашей личной странице для успешного прохождения отбора для участия в Deadline-Смене. Для этого авторизуйтесь на сайте и заполните в #{link_to "Ваш профиль" , edit_account_url}.
 
 %p Организаторы свяжутся с Вами дополнительно по указанному телефону или email.
 
