tmp hide social fields

--- a/app/views/web/accounts/edit.html.haml
+++ b/app/views/web/accounts/edit.html.haml
@@ -28,9 +28,9 @@
                 = f.input :skype
                 = f.input :jabber
                 = f.input :icq
-                = f.input :facebook, :hint => member_t.t('facebook_hint')
-                = f.input :twitter, :hint => member_t.t('twitter_hint')
-                = f.input :vkontakte, :hint => member_t.t('vkontakte_hint')
+                -#= f.input :facebook, :hint => member_t.t('facebook_hint')
+                -#= f.input :twitter, :hint => member_t.t('twitter_hint')
+                -#= f.input :vkontakte, :hint => member_t.t('vkontakte_hint')
                 = f.input :web
             .span
               %fieldset
