--- a/app/views/web/admin/members/_form.html.haml
+++ b/app/views/web/admin/members/_form.html.haml
@@ -29,9 +29,9 @@
                 = f.input :skype
                 = f.input :jabber
                 = f.input :icq
-                = f.input :facebook
-                = f.input :twitter
-                = f.input :vkontakte
+                -#= f.input :facebook
+                -#= f.input :twitter
+                -#= f.input :vkontakte
                 = f.input :web
             .span
               %fieldset
