fixes #97. main page

--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -43,17 +43,21 @@
   = image_tag 'grey_out.png'
 
 .row.landing_lower
-  .span6
+  .span4
     %h4 За чей счёт?
     %p Для участников мероприятие будет бесплатным.
-    %p Проживание, питание, доставка участников до места назначения и обратно будут организованы МИЦ за счёт Министерства образования.
+    %p Проживание, питание, доставка участников до места назначения и обратно будут организованы Департаментом молодёжной политики и Молодёжным инициативным центром.
     %p Каждый участник должен иметь при себе личный ноутбук и желание плодотворно поработать.
-  .span6
+  .span4
     %h4 Зачем это нужно?
     %ul
       %li Создание площадки для самореализации будущих специалистов
       %li Обмен опытом между участниками и действующими специалистами ведущих компании по разработке программного обеспечения г.Ульяновска
       %li Создание «движухи» для молодых программистов Ульяновской области Мероприятие реализуется на общественных началах. В планах сделать Смену Deadline ежегодным мероприятием.
+  .span4
+    %h4 Что с собой взять?
+    %p Каждый участник должен иметь при себе личный ноутбук, желание плодотворно поработать, копию паспорта (свидетельства о рождении), оригинал медицинского полиса.
+    %p Все участники обучающей смены должны также сделать прививку от клещевого энцефалита. Если сделать её не успели или не смогли, то необходимо предоставить МИЦ заявление от родителей (для несовершеннолетних) или от себя (для людей старше 18 лет) о том, что ответственность за жизнь и здоровье в связи с клещевым энцефалитом с организаторов снимается.
 
 .center.splitter
   = image_tag 'grey_out.png'
