added registration time inform

--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -12,10 +12,11 @@
     - else
       %a.btn.btn-success.btn-large{:href => new_member_path}
         %i.icon-chevron-right
-        Регистрация
+        Регистрация *
       %a.btn.btn-primary.btn-large{:href => new_session_path}
         %i.icon-chevron-right
         Вход
+      %p * Регистрация открыта до 30 июня.
   .span6
     = image_tag 'man.png', :width => '430px'
 
