added sponsor logos

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -85,3 +85,6 @@ footer a:hover, footer .nav li a:hover {
   padding-top: 20px;
   padding-bottom: 100px;
 }
+img.logo_sponsor {
+  height: 100px;
+}
