--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -64,10 +64,11 @@
   = image_tag 'grey_out.png'
 
 .row.landing_bottom
-  .span10
+  .span12
     %h4 Организаторы
     .span2
-      = image_tag 'picture_mic.png', :style => 'height: 100px;'
+      %a{:href => 'http://www.ulmic.ru/'}
+        = image_tag 'picture_mic.png', :class => "logo_sponsor"
     .span2
       %p
         Некоммерческое
@@ -77,4 +78,28 @@
         Содействия
         %br
         Развитию ИТ
-
+    .span2
+      %a{:href => "http://ulgov.ru/"}
+        = image_tag '3_logo_ul_gov.png', :class => "logo_sponsor"
+    .span2
+      = image_tag '4_logo_department.png', :class => "logo_sponsor"
+    .span2
+      %a{:href => "http://itc73.ru/"}
+        = image_tag '5_logo_itc.png'
+.row.landing_bottom
+  .span12
+    .span2
+      %a{:href => "http://kaize.ru/"}
+        = image_tag '6_logo_kaize.png'
+    .span2
+      %a{:href => "http://www.simtech.ru/"}
+        = image_tag '7_logo_simtech.png'
+    .span2
+      %a{:href => "http://m-st.ru/"}
+        = image_tag '8_logo_mst.png'
+    .span2
+      %a{:href => "http://simbirsoft.com/"}
+        = image_tag '9_logo_simbirsoft.png'
+    .span2
+      %a{:href => "http://itmcompany.ru/"}
+        = image_tag '10_logo_itm.png'
