added city and birthday to member

--- a/app/views/web/accounts/edit.html.haml
+++ b/app/views/web/accounts/edit.html.haml
@@ -25,6 +25,8 @@
                 = f.input :last_name
                 = f.input :patronymic
                 = f.input :phone, :hint => member_t.t('phone_hint')
+                = f.input :city
+                = f.input :birthday, :as => :date_picker
                 = f.input :skype
                 = f.input :jabber
                 = f.input :icq
