--- a/app/views/web/accounts/edit.html.haml
+++ b/app/views/web/accounts/edit.html.haml
@@ -18,7 +18,7 @@
       .tab-content
         .tab-pane.active#general
           .row
-            .span
+            .span5
               %fieldset
                 %legend= member_t.t('contact_info')
                 = f.input :first_name
@@ -34,7 +34,7 @@
                 -#= f.input :twitter, :hint => member_t.t('twitter_hint')
                 -#= f.input :vkontakte, :hint => member_t.t('vkontakte_hint')
                 = f.input :web
-            .span
+            .span6
               %fieldset
                 %legend= member_t.t('education')
                 = f.input :institute
