--- a/app/views/web/admin/members/_form.html.haml
+++ b/app/views/web/admin/members/_form.html.haml
@@ -49,6 +49,7 @@
                 = f.input :department
                 = f.input :profession
                 = f.input :group
+                = f.input :schoolyear_count, :collection => Member::SCHOOLYEARS
                 = f.input :degree
                 = f.input :gpa
 
