--- a/app/views/web/members/new.html.haml
+++ b/app/views/web/members/new.html.haml
@@ -30,6 +30,7 @@
           = f.input :department
           = f.input :profession
           = f.input :group
+          = f.input :schoolyear_count, :collection => Member::SCHOOLYEARS
           = f.input :degree
           = f.input :gpa
 
