replace splash image

--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -18,7 +18,7 @@
         Вход
       %p * Регистрация открыта до 30 июня.
   .span6
-    = image_tag 'man.png', :width => '430px'
+    = image_tag 'splash.png', :width => '430px'
 
 .center.splitter
   = image_tag 'grey_out.png'
