--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -69,6 +69,9 @@
   .span12
     %h4 Организаторы
     .span2
+      %a{:href => "http://www.beeline.ru/"}
+        = image_tag '1_beeline_logo.png', :class => "logo_sponsor"
+    .span2
       %a{:href => 'http://www.ulmic.ru/'}
         = image_tag 'picture_mic.png', :class => "logo_sponsor"
     .span2
@@ -85,6 +88,8 @@
         = image_tag '3_logo_ul_gov.png', :class => "logo_sponsor"
     .span2
       = image_tag '4_logo_department.png', :class => "logo_sponsor"
+.row.landing_bottom
+  .span12
     .span2
       %a{:href => "http://itc73.ru/"}
         = image_tag '5_logo_itc.png'
